assets/less/board.less
@import "variables.less";

.board {
    background-color: #f9f9f9;
    width: 100%;
    height: 100%;

    &> .mui-paper-container {
        align-items: center;
        padding: 20px;
        overflow: hidden;
    }
}

.cell {
    padding-bottom: 5.66%;
    width: 5.66%;
    position: relative;
    margin-right: 1%;
    float: right;
    margin-bottom: 5px;
}


.cell-letter {
    line-height: 80px;
    font-size: 2rem;
    text-transform: uppercase;
}

.cell-points {
    position: absolute;
    left: 5px;
    bottom: 0;
    font-size: .7rem;
}

.cell-content {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #ffffff;
    text-align: center;
    vertical-align: middle;
    display: inline-block;
    font-size: 1.4rem;
    width: 100%;
    border: 1px solid #ffffff;

    .mui-paper-container {
        position: relative;
    }
}

.cell.is-empty {
    background-color: #f9f9f9;
    // border: 1px solid #ffffff;
    color: #f9f9f9;
    line-height: 3;
    font-size: 1rem;

    .cell-content {
        background-color: #f9f9f9;
        border: 1px solid #e3e3e3;
    }
    
    &:hover .cell-content {
        border: 1px solid #858585;
    }
}


.cell.is-special {
    .special-tw {
        border-color: red;
    }

    .tile-set {
        color: #fff;
    }

    .special-tw:hover, .special-tw.tile-set  {
        background-color: red;
    }

    .special-dl {
        border-color: blue;
    }

    .special-dl:hover, .special-dl.tile-set {
        background-color: blue;
    }

    .special-dw {
        border-color: teal;
    }

    .special-dw:hover, .special-dw.tile-set {
        background-color: teal;
    }

    .special-tl {
        border-color: brown;
    }

    .special-tl:hover, .special-tl.tile-set {
        background-color: brown;
    }

    .cell-content:hover {
        color: #ffffff;
        // background-color: @color;
    }

    // &:hover .cell-content {
    //     border: 1px solid;
    // }
}

.cell.is-drop-target {
    .cell-content {
        border-style: dashed;
    }
}

.cell.is-drop-target.is-empty {
    .cell-content {
        border-style: dashed;
        border-color: #858585;
    }
}

.cell.is-not-drag-target {
    opacity: .1;
    cursor: no-drop;
}

